Adding drag n drop functionality

--- a/popup/page.html
+++ b/popup/page.html
@@ -123,7 +123,7 @@
 
 
   <div class="messages boxLeft" contenteditable="true" style="display:block" id="_messages"></div>
-  <div id="listText"></div>
+  <div id="listText" ondragover="allowDrop" ondrop="drop(event)"></div>
 
 
   <script src="synchronise.js"></script>
