--- a/popup/page.html
+++ b/popup/page.html
@@ -121,13 +121,12 @@
     <button class="boxLeft" id="_pastenow">Add</button>
   </div>
 
-
   <div class="messages boxLeft" contenteditable="true" style="display:block" id="_messages"></div>
-  <div id="listText" ondragover="allowDrop" ondrop="drop(event)"></div>
-
+  <div id="listText"></div>
 
   <script src="synchronise.js"></script>
   <script src="view.js"></script>
+  <script src="dragndrop.js"></script>
   <script src="popup.js"></script>
   <script src="events.js"></script>
 </body>
