--- a/popup/popup.html
+++ b/popup/popup.html
@@ -128,6 +128,7 @@
 
   <script src="synchronise.js"></script>
   <script src="view.js"></script>
+  <script src="dragndrop.js"></script>
   <script src="popup.js"></script>
   <script src="events.js"></script>
 </body>
