--- a/popup/popup.html
+++ b/popup/popup.html
@@ -101,7 +101,7 @@
         <i class="fa fa-caret-down"></i>
       </button>
       <div class="dropdown-content">
-        <a id="_dedup" href="#">deDupl</a>
+        <a id="_dedup" href="#">deDup</a>
         <a id="_test" href="#">Test</a>
         <a id="_sort" href="#">Sort</a>
         <a id="_clean" href="#">Clear All</a>
@@ -128,9 +128,9 @@
 
   <script src="synchronise.js"></script>
   <script src="view.js"></script>
-  <script src="dragndrop.js"></script>
-  <script src="popup.js"></script>
   <script src="events.js"></script>
+  <script src="popup.js"></script>
+  <!-- <script src="dragndrop.js"></script> -->
 </body>
 
 </html>
