--- a/popup/popup.html
+++ b/popup/popup.html
@@ -103,7 +103,7 @@
       <div class="dropdown-content">
         <a id="_dedup" href="#">deDup</a>
         <a id="_test" href="#">Test</a>
-        <a id="_sort" href="#">Sort</a>
+        <a id="_check" href="#">Check</a>
         <a id="_clean" href="#">Clear All</a>
       </div>
     </div>
