implementing draag 'n' drop functionality v0.2

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -129,8 +129,8 @@
   <script src="synchronise.js"></script>
   <script src="view.js"></script>
   <script src="events.js"></script>
+  <script src="dragndrop.js"></script>
   <script src="popup.js"></script>
-  <!-- <script src="dragndrop.js"></script> -->
 </body>
 
 </html>
