drag n drop functonality enhancement

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -129,7 +129,7 @@
   <script src="synchronise.js"></script>
   <script src="view.js"></script>
   <script src="events.js"></script>
-  <!-- <script src="dragndrop.js"></script> -->
+  <script src="dragndrop.js"></script>
   <script src="popup.js"></script>
 </body>
 
