--- a/popup/page.html
+++ b/popup/page.html
@@ -101,9 +101,9 @@
         <i class="fa fa-caret-down"></i>
       </button>
       <div class="dropdown-content">
-        <a id="_dedup" href="#">deDupl</a>
+        <a id="_dedup" href="#">deDup</a>
         <a id="_test" href="#">Test</a>
-        <a id="_sort" href="#">Sort</a>
+        <a id="_check" href="#">Check</a>
         <a id="_clean" href="#">Clear All</a>
       </div>
     </div>
@@ -121,14 +121,16 @@
     <button class="boxLeft" id="_pastenow">Add</button>
   </div>
 
+
   <div class="messages boxLeft" contenteditable="true" style="display:block" id="_messages"></div>
   <div id="listText"></div>
 
+
   <script src="synchronise.js"></script>
   <script src="view.js"></script>
-  <script src="dragndrop.js"></script>
-  <script src="popup.js"></script>
   <script src="events.js"></script>
+  <!-- <script src="dragndrop.js"></script> -->
+  <script src="popup.js"></script>
 </body>
 
 </html>
