firefox drop bug fixed

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -131,6 +131,8 @@
   <script src="events.js"></script>
   <script src="dragndrop.js"></script>
   <script src="popup.js"></script>
+
+  <!-- <script src="dragndrop-MDN.js"></script> -->
 </body>
 
 </html>
