--- a/tab-man/popup/popup.html
+++ b/tab-man/popup/popup.html
@@ -88,13 +88,16 @@
         <a id="_bulkclipcopy" href="#">Copy</a>
         <a id="_bulkremove" href="#">Remove</a>
 
-        <a id="_bulkselect" href="#">Select All</a>
-        <a id="_bulkunselect" href="#">Unselect All</a>
+        <a id="_bulkselect" href="#">All</a>
+        <a id="_bulkunselect" href="#">None</a>
       </div>
     </div>
 
     <a id="_pasteareashow" href="#home">Paste</a>
     <a id="_inpage" href="#home">Open in Tab</a>
+    <a id="_help" href="#home">Help</a>
+
+    <a href="#home">Search</a>
 
     <div class="dropdown">
       <button class="dropbtn">Settings
@@ -108,7 +111,6 @@
       </div>
     </div>
 
-    <a href="#home">Search</a>
   </div>
 
   <!--   <div class="pastearea boxLeft" style="display:none" id="_pastearea">
