--- a/tab-man/src/popup.html
+++ b/tab-man/src/popup.html
@@ -2,78 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <link rel="stylesheet" href="page.css" />
+    <link rel="stylesheet" href="popup.css" />
     <meta name="viewport" content="width=370, user-scalable=no" />
-
-    <style>
-      body {
-        font-family: Arial, Helvetica, sans-serif;
-      }
-
-      .navbar {
-        overflow: hidden;
-        background-color: #333;
-      }
-
-      .navbar a {
-        float: left;
-        font-size: 14px;
-        color: white;
-        text-align: center;
-        padding: 14px 16px;
-        text-decoration: none;
-      }
-
-      .dropdown {
-        float: left;
-        overflow: hidden;
-      }
-
-      .dropdown .dropbtn {
-        font-size: 14px;
-        border: none;
-        outline: none;
-        color: white;
-        padding: 14px 16px;
-        background-color: inherit;
-        font-family: inherit;
-        margin: 0;
-      }
-
-      .navbar a:hover,
-      .dropdown:hover .dropbtn {
-        background-color: red;
-      }
-
-      .dropdown-content {
-        display: none;
-        position: absolute;
-        background-color: #f9f9f9;
-        min-width: 160px;
-        box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-        z-index: 1;
-      }
-
-      .dropdown-content a {
-        /*float: none;*/
-        color: black;
-        padding: 12px 16px;
-        text-decoration: none;
-        /*display: block;*/
-        text-align: left;
-      }
-
-      .dropdown-content a:hover {
-        background-color: #ddd;
-      }
-
-      .dropdown:hover .dropdown-content {
-        display: block;
-      }
-    </style>
   </head>
 
-  <body>
     <div class="navbar">
       <div class="dropdown">
         <button class="dropbtn">
@@ -91,8 +23,12 @@
         </div>
       </div>
 
-      <a id="_pasteareashow" href="#home">Paste</a>
+      <!-- <a id="_pasteareashow" href="#home">Paste</a> -->
+      <a id="_paste" href="paste.html">Paste</a>
+
       <a id="_inpage" href="#home">Open in Tab</a>
+      <a id="_help" href="help.html">Help</a>
+
       <!-- <a id="_help" href="#home">Help</a> -->
 
       <!-- <a href="#home">Search</a> -->
@@ -123,14 +59,14 @@
       <button class="boxLeft" id="_pastenow">Add</button>
     </div> -->
 
-    <div id="listText"></div>
-
     <div
       class="messages boxLeft"
       contenteditable="true"
       style="display:block"
       id="_messages"
     ></div>
+
+    <div id="listText"></div>
 
     <script src="synchronise.js"></script>
     <script src="view.js"></script>
