minor bugs fixed

--- a/tab-man/src/popup.html
+++ b/tab-man/src/popup.html
@@ -16,10 +16,9 @@
           <a id="_bulkmoveup" href="#">↑</a>
           <a id="_bulkmovedown" href="#">↓</a>
           <a id="_bulkclipcopy" href="#">Copy</a>
-          <a id="_bulkremove" href="#">Remove</a>
-
           <a id="_bulkselect" href="#">All</a>
           <a id="_bulkunselect" href="#">None</a>
+          <a id="_bulkremove" href="#">Remove</a>
         </div>
       </div>
 
@@ -28,6 +27,7 @@
 
       <a id="_inpage" href="#home">Open in Tab</a>
       <a id="_help" href="help.html">Help</a>
+      <a id="_cleanup" href="#">Help</a>
 
       <!-- <a id="_help" href="#home">Help</a> -->
 
