Drag 'n' drop bug fixed

--- a/tab-man/src/popup.html
+++ b/tab-man/src/popup.html
@@ -27,7 +27,7 @@
 
       <a id="_inpage" href="#home">Open in Tab</a>
       <a id="_help" href="help.html">Help</a>
-      <a id="_cleanup" href="#">Help</a>
+      <a id="_cleanup" href="help.html">CleanUp</a>
 
       <!-- <a id="_help" href="#home">Help</a> -->
 
