--- a/tab-man/src/help.html
+++ b/tab-man/src/help.html
@@ -24,7 +24,7 @@
       <a href="popup.html">Back</a>
     </div>
     <h1>
-      Help page is Under Construction
+      Under Construction
     </h1>
   </body>
 </html>
