Drag 'n' drop user experience enhanced

--- a/tab-man/src/cleanup.html
+++ b/tab-man/src/cleanup.html
@@ -24,7 +24,7 @@
       <a href="popup.html">Back</a>
     </div>
     <h1>
-      Help: Under Construction
+      CleanUp: Under Construction
     </h1>
   </body>
 </html>
