--- a/tab-man/src/paste.html
+++ b/tab-man/src/paste.html
@@ -11,7 +11,8 @@
     <div class="container">
 
     <div class="navbar">
-      <a id="_pastedone" href="#home">Done</a>
+      <a id="_pasteNew" href="#home">Open in new window</a>
+      <a id="_pasteCurrent" href="#home">Open in current window</a>
       <a id="_pastecancel" href="popup.html">Cancel</a>
     </div>
 
