--- a/tab-man/src/help.html
+++ b/tab-man/src/help.html
@@ -11,11 +11,12 @@
 
       body {
         width: 450px;
-        height: 500px;
+        /* height: 500px; */
         background-color: #cca94098;
         /* #ffc000; */
-        margin: 0px !important;
-        border: 3px solid rgba(0, 0, 0, 0.3) !important;
+        margin: 10px !important;
+        /* border: 3px solid rgba(0, 0, 0, 0.3) !important; */
+				font-size: 16px;
       }
     </style>
   </head>
@@ -23,8 +24,33 @@
     <div class="navbar">
       <a href="popup.html">Back</a>
     </div>
-    <h1>
-      Help: Under Construction
-    </h1>
+    <h1>Tab-man</h1>
+This add-on was built particularly for real world use.<br>
+This add-on implements smart practices for tab managing, bookmarking, history
+and clipboard interaction.<br><br>
+
+That said, with this add-on you are able to:<br>
+
+- Organize your browser sessions giving a persistent name.<br>
+- Automatically synchronize with the changes you do on the respective window.<br>
+  That means if you remove a tab from the respective window this reflects also to the underlying database.<br>
+- Keep your window session available even after closing the window.<br>
+- Drag 'n' drop functionality to organize windows order at your will.<br><br>
+
+- Copy to clipboard: <br>
+  Copy window session to clipboard in an organized way in order to paste it whenever you want.<br>
+- Paste from clipboard: <br>
+  Paste text from clipboard, grab links with smart routines and finally open a new window with a tab for each link found.<br><br>
+
+- Show window:<br>
+  Bring to front a specific window.<br><br>
+
+- Open in Tab:<br>
+  Open and use this add-on into a browser tab.<br><br>
+
+- CleanUp command that removes all database entries for windows that are closed and with no name attached.<br><br>
+
+- Bulk operation: Move up, Move down, Copy, Select all, Unselect all<br>
+
   </body>
 </html>
