--- a/tab-man/src/popup.html
+++ b/tab-man/src/popup.html
@@ -22,8 +22,8 @@
           <a id="_bulkselect" href="#">All</a>
           <a id="_bulkunselect" href="#">None</a>
           <a id="_bulkremove" href="#">Remove</a>
-          <a id="_clearall" href="#">Clear All</a>
-          <a id="_dedup" href="#">deDup</a>
+          <!-- <a id="_clearall" href="#">Clear All</a> -->
+          <!-- <a id="_dedup" href="#">deDup</a> -->
         </div>
       </div>
 
@@ -31,7 +31,7 @@
 
       <a id="_inpage" href="#home">Open in Tab</a>
       <a id="_help" href="help.html">Help</a>
-      <a id="_cleanup" href="help.html">CleanUp</a>
+      <!-- <a id="_cleanup" href="help.html">CleanUp</a> -->
     </div>
 
     <div id="listText"></div>
